--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
     working_dir: /app
     command: >
       sh -c "
+      apt-get update &&  # Update package lists 
+      apt-get install -y wget &&  # Install wget
       pip install --no-cache-dir -r requirements.txt &&
       python scripts/download_dataset.py &&
       jupyter nbconvert --to notebook --execute notebooks/eda_modeling.ipynb --inplace &&
